Some editing all over has been done

--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -668,7 +668,7 @@ property & ParentOfSon & parentOf & - & Male & $\exists$ \\
 \begin{center}
 \begin{DL} 
 $(\forall R.C)^\mathcal{I}= \{a \in \Delta^\mathcal{I}\mid (a,b) \in R^\mathcal{I} \rightarrow b \in C^\mathcal{I} \}$ where $\cdot^\mathcal{I}$ is an interpretation function, \\
-$\Delta^I$ is the domain, $a,b \in \Delta^\mathcal{I}$ are individuals $C$ is a concept, $R$ is a role. 
+$\Delta^\mathcal{I}$ is the domain, $a,b \in \Delta^\mathcal{I}$ are individuals $C$ is a concept, $R$ is a role. 
 \end{DL}
 \end{center}
 
