--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -492,7 +492,9 @@ $B$ &$\equiv \exists b.E$
 \end{center}
 As this constraint is a complex constraint (constructed out of multiple complex and simple constraints), its expressivity is evaluated by the expressivity of the individual constraints used.
 The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \ms{union}, and \ms{existential restriction} are used to express this constraint.  
-As existential restrictions are part of OWL 2 DL reasoning, the constraint's complexity is \textsc{N2exptime}. \er{Now computational complexity? Existential restrictions are not necessarily \textsc{N2Exptime}}
+% As existential restrictions are part of OWL 2 DL reasoning, the constraint's complexity is \textsc{N2exptime}.
+
+% \er{Now computational complexity? Existential restrictions are not necessarily \textsc{N2Exptime}}
 
 \subsection{Reasoning}
 
